<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadoNota">

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtResult"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="108dp" />

    <TextView
        android:id="@+id/txtNotFin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNotFin"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="208dp" />

    <TextView
        android:id="@+id/txtNotita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CalculoFinal"
        tools:layout_editor_absoluteX="190dp"
        tools:layout_editor_absoluteY="266dp" />

    <TextView
        android:id="@+id/txtRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtResult"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="326dp" />

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtStatus"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="402dp" />
</androidx.constraintlayout.widget.ConstraintLayout>